# trabalho-final-cocada-26-1

./: .editorconfig  .gitignore  .prettierrc  README.md
backend/: .dockerignore  Dockerfile  main.py  nixpacks.toml  pyproject.toml  requirements.txt
backend/data_processing/: image_utils.py
backend/routers/: api.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  AppContext.tsx  Layout.tsx  api.ts  styles.css
frontend/src/pages/: Analise.tsx  Compressor.tsx  Teoria.tsx
